minor update to explanatory text

--- a/bayesian-linear-fitting.ipynb
+++ b/bayesian-linear-fitting.ipynb
@@ -148,7 +148,7 @@
     "### Priors\n",
     "Priors are a key part of Bayesian analysis. They allow what is known about the properties of the system to be included in the analysis in a principled manner.\n",
     "\n",
-    "$\\alpha$ and $\\beta$ can take on any real values – use a normal prior for them. For simplicity will use values for the standard deviations of the distribution. In \"real life\" it may be better to use something like an inverse gamma distribution for these standard deviations.\n",
+    "$\\alpha$ and $\\beta$ can take on any real values – use a normal prior for them. For simplicity, will use values for the standard deviations of the distribution. In \"real life\" it may be better to use something like an inverse gamma distribution for these standard deviations.\n",
     "\n",
     "$\\sigma$ will be a positive number - use a HalfNormal prior (could also use an exponential prior)\n",
     "\n",
@@ -339,7 +339,8 @@
     "axes[1].plot(x,true_alpha + true_beta*x , 'r--', lw=2, label=\"Generating line\")\n",
     "axes[1].set_xlabel(\"x\")\n",
     "axes[1].legend();\n",
-    "#plt.savefig(\"../fig/linear_bikes_posterior_lines.png\")"
+    "# to save the output uncomment the next line and addvalid path, filename...\n",
+    "#plt.savefig(\"path/filename.png\")"
    ]
   },
   {
